@@ -1,5 +1,10 @@
 2010-03-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
+	Added missing wallclock.h to SRCS.
+	* src/Makefile.am
+
+2010-03-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
 	Fixed compile error with --disable-bittorrent
 	* test/Metalink2RequestGroupTest.cc
 	* test/MetalinkParserControllerTest.cc
